deployment/coffee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-frontend
  template:
    metadata:
      labels:
        app: coffee-frontend
    spec:
      containers:
        - name: coffee-frontend
          image: santiario/coffee-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-backend
  template:
    metadata:
      labels:
        app: coffee-backend
    spec:
      containers:
        - name: coffee-backend
          image: santiario/coffee-backend:latest
          ports:
            - containerPort: 8080
